--- a/src/flask_service/templates/home.html
+++ b/src/flask_service/templates/home.html
@@ -2,8 +2,9 @@
 <html>
   <div class="col-md-6">
     <form action='/get_sentiment'>
-    	<label>Enter Ticker</label>
+    	<label>Enter Ticker and Company</label>
     	<input type=text name="ticker" id="ticker" value="MSFT" />
+    	<input type=text name="company" id="company" value="microsoft" />
     	<input type=submit value="Get Social Sentiment" />
     </form>
   </div>
